updated secret key

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URI=mongodb+srv://DriveTestDb:12345@drivetest.x2nq1.mongodb.net/?retryWrites=true&w=majority&appName=DriveTest
+SESSION_SECRET=GunpreetSingh
+PORT=3000
