--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb+srv://DriveTestDb:12345@drivetest.x2nq1.mongodb.net/?retryWrites=true&w=majority&appName=DriveTest
 SESSION_SECRET=GunpreetSingh
-PORT=3000
+PORT=4000
+ENCRYPTION_KEY=12345678901345678901234567890123
