--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+# File: .env
+# Author: Gunpreet Singh
+# Student ID: 9022194
+# Purpose: Stores environment variables for the application (e.g., database URI, session secret).
 MONGODB_URI=mongodb+srv://DriveTestDb:12345@drivetest.x2nq1.mongodb.net/?retryWrites=true&w=majority&appName=DriveTest
 SESSION_SECRET=GunpreetSingh
 PORT=4000
